--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-v0-project",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev ",
@@ -14,58 +13,58 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@supabase/supabase-js": "^2.75.0",
-    "@tinymce/tinymce-react": "^6.1.0",
-    "autoprefixer": "^10.4.20",
-    "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
-    "date-fns": "^3.6.0",
-    "dotenv": "^17.2.3",
-    "embla-carousel-react": "8.5.1",
-    "formidable": "^3.5.4",
-    "framer-motion": "^12.23.22",
-    "input-otp": "1.4.1",
-    "iron-session": "^8.0.4",
-    "jose": "^6.0.10",
-    "lucide-react": "^0.454.0",
-    "multer": "^1.4.5-lts.2",
-    "next": "^15.5.5",
-    "next-auth": "^4.24.11",
+    "@hookform/resolvers": "^3.3.2",
+    "@supabase/supabase-js": "^2.39.0",
+    "@tinymce/tinymce-react": "^4.3.2",
+    "autoprefixer": "^10.4.16",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "embla-carousel-react": "^8.0.0",
+    "formidable": "^3.5.1",
+    "framer-motion": "^10.16.4",
+    "input-otp": "^1.0.1",
+    "iron-session": "^6.3.1",
+    "jose": "^5.1.1",
+    "lucide-react": "^0.292.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "next-connect": "^1.0.0",
-    "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.1",
-    "react-resizable-panels": "^2.1.7",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.9.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-resizable-panels": "^1.0.5",
+    "sonner": "^1.2.4",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "vaul": "^0.7.9",
+    "zod": "^3.22.4"
   },
   "sideEffects": false,
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-react": "^7.27.1",
-    "@next/bundle-analyzer": "^15.5.5",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@next/bundle-analyzer": "^14.0.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "^15.3.3",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.3",
+    "eslint-config-prettier": "^9.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-mocks-http": "^1.17.2",
-    "postcss": "^8",
-    "supertest": "^7.1.4",
-    "tailwindcss": "^3.4.17"
+    "node-mocks-http": "^1.13.0",
+    "postcss": "^8.4.31",
+    "supertest": "^6.3.3",
+    "tailwindcss": "^3.3.5"
   }
 }
